push to CF